// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiPanel--paddingMedium testClass1 testClass2 css-1yzwxdg-euiPanel-grow-m-m-plain-hasShadow"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPanel props borderRadius m is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-1yzwxdg-euiPanel-grow-m-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props borderRadius none is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-bc85a2-euiPanel-grow-none-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props color accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--accent euiPanel--paddingMedium css-1j7p6d2-euiPanel-grow-m-m-accent"
/>
`;

exports[`EuiPanel props color danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--danger euiPanel--paddingMedium css-dy8jp1-euiPanel-grow-m-m-danger"
/>
`;

exports[`EuiPanel props color plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-1yzwxdg-euiPanel-grow-m-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props color primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--primary euiPanel--paddingMedium css-ydz1qa-euiPanel-grow-m-m-primary"
/>
`;

exports[`EuiPanel props color subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPanel--paddingMedium css-isico0-euiPanel-grow-m-m-subdued"
/>
`;

exports[`EuiPanel props color success is rendered 1`] = `
<div
  class="euiPanel euiPanel--success euiPanel--paddingMedium css-1j07edk-euiPanel-grow-m-m-success"
/>
`;

exports[`EuiPanel props color transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--transparent euiPanel--paddingMedium css-1w09o94-euiPanel-grow-m-m-transparent"
/>
`;

exports[`EuiPanel props color warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--warning euiPanel--paddingMedium css-gn06xo-euiPanel-grow-m-m-warning"
/>
`;

exports[`EuiPanel props grow can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-nybkxs-euiPanel-m-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props hasBorder can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-1yzwxdg-euiPanel-grow-m-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props hasBorder can be true 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-khmtme-euiPanel-grow-m-m-plain-hasBorder"
/>
`;

exports[`EuiPanel props hasShadow can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-1l4493j-euiPanel-grow-m-m-plain"
/>
`;

exports[`EuiPanel props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingLarge css-15y4d5v-euiPanel-grow-m-l-plain-hasShadow"
/>
`;

exports[`EuiPanel props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingMedium css-1yzwxdg-euiPanel-grow-m-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain css-1lsigof-euiPanel-grow-m-plain-hasShadow"
/>
`;

exports[`EuiPanel props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiPanel--paddingSmall css-13ibqvb-euiPanel-grow-m-s-plain-hasShadow"
/>
`;

exports[`EuiPanel props paddingSize xl is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain css-1m1b03m-euiPanel-grow-m-xl-plain-hasShadow"
/>
`;

exports[`EuiPanel props paddingSize xs is rendered 1`] = `
<div
  class="euiPanel euiPanel--plain css-1688qte-euiPanel-grow-m-xs-plain-hasShadow"
/>
`;
